erDiagram
  PUSKESMAS ||--o{ DIAGNOSIS_PERIODE : records
  PUSKESMAS ||--o{ GEJALA_PERIODE : records
  PUSKESMAS ||--o{ ANAMNESIS_RAW : records
  PUSKESMAS ||--o{ KONTEKS_PERIODE : contextualizes
  PUSKESMAS ||--o{ STOK_PUSKESMAS : stocks
  PUSKESMAS ||--o{ FORECAST_RUN : forecasts
  PUSKESMAS ||--o{ LPLPO_PREDIKTIF : requests
  PUSKESMAS ||--o{ ALLOCATION_PLAN : receives
  PUSKESMAS ||--o{ ALERT : triggers
  OBAT ||--o{ KONDISI_OBAT : treats
  KONDISI ||--o{ KONDISI_OBAT : requires
  GEJALA ||--o{ GEJALA_KONDISI : indicates
  KONDISI ||--o{ GEJALA_KONDISI : suggested_by
  KONDISI ||--o{ DIAGNOSIS_PERIODE : diagnosed
  GEJALA ||--o{ GEJALA_PERIODE : reported
  OBAT ||--o{ STOK_PUSKESMAS : stocked
  FORECAST_RUN ||--o{ PREDIKSI_STOK : produces
  OBAT ||--o{ PREDIKSI_STOK : predicted
  KONDISI ||--o{ PREDIKSI_STOK : explains
  PREDIKSI_STOK ||--o{ LPLPO_PREDIKTIF : feeds
  OBAT ||--o{ LPLPO_PREDIKTIF : requested
  OBAT ||--o{ LOG_REKONSILIASI : evaluated
  ALLOCATION_PLAN ||--o{ ALLOCATION_PLAN_ITEM : contains
  OBAT ||--o{ ALLOCATION_PLAN_ITEM : allocates
